# Parallel_Matrix_Profile

./: .gitignore  Brody_Dummy_file.txt  CMakeLists.txt  HOW_TO_BUILD_AND_RUN.txt  README.md  compute-percent-diff.py  run_actual_results.sh  show-percent-diffs.sh  show-performance-diffs.sh  show-results-diff.sh  work_breakdown_structure.txt
.github/workflows/: cmake.yml
actual_results/: AAPL-matrix_profile.csv  AMZN-matrix_profile.csv  AirPassengers-matrix_profile.csv  MSFT-matrix_profile.csv  TSLA-matrix_profile.csv  california_covid19_cases-matrix_profile.csv  daily_min_temperature-matrix_profile.csv  us_gdp-matrix_profile.csv
actual_results/performance/: AAPL-matrix_profile-perf.txt  AMZN-matrix_profile-perf.txt  AirPassengers-matrix_profile-perf.txt  MSFT-matrix_profile-perf.txt  TSLA-matrix_profile-perf.txt  california_covid19_cases-matrix_profile-perf.txt  daily_min_temperature-matrix_profile-perf.txt  us_gdp-matrix_profile-perf.txt
cmake/: FindFilesystem.cmake
csv-parser/: CMakeSettings.json
fftw3/: CMakeLists.txt  ChangeLog  Makefile.in  NEWS  aclocal.m4  bootstrap.sh  cmake.config.h.in  config.h.in  configure.ac  fftw.pc.in
fftw3/api/: Makefile.in  plan-dft-r2c-3d.c  plan-dft-r2c.c  plan-dft.c  plan-guru-dft-c2r.c  plan-guru-dft-c2r.h  plan-guru-dft-r2c.c  plan-guru-dft-r2c.h  plan-guru-dft.c  plan-guru-dft.h  plan-guru-r2r.c  plan-guru-r2r.h  plan-guru-split-dft-c2r.c  plan-guru-split-dft-c2r.h  plan-guru-split-dft-r2c.c  plan-guru-split-dft-r2c.h  plan-guru-split-dft.c  plan-guru-split-dft.h  plan-guru64-dft-c2r.c  plan-guru64-dft-r2c.c  plan-guru64-dft.c  plan-guru64-r2r.c  plan-guru64-split-dft-c2r.c  plan-guru64-split-dft-r2c.c  plan-guru64-split-dft.c  plan-many-dft-c2r.c  plan-many-dft-r2c.c  plan-many-dft.c  plan-many-r2r.c  plan-r2r-1d.c  plan-r2r-2d.c  plan-r2r-3d.c  plan-r2r.c  print-plan.c  rdft2-pad.c  the-planner.c  version.c  x77.h
fftw3/dft/: Makefile.am  Makefile.in  bluestein.c  buffered.c  codelet-dft.h  conf.c  ct.c  ct.h  dft.h  dftw-direct.c  dftw-directsq.c  dftw-generic.c  dftw-genericbuf.c  direct.c  generic.c  indirect-transpose.c  indirect.c  kdft-dif.c  kdft-difsq.c  kdft-dit.c  kdft.c  nop.c  plan.c  problem.c  rader.c  rank-geq2.c  solve.c  vrank-geq1.c  zero.c
fftw3/doc/: Makefile.am  Makefile.in  acknowledgements.texi  cindex.texi  f77_wisdom.f  fftw3.texi  findex.texi  install.texi  intro.texi  legacy-fortran.texi  license.texi  modern-fortran.texi  mpi.texi  other.texi  reference.texi  rfftwnd.eps  rfftwnd.fig  stamp-vti  texinfo.tex  threads.texi  tutorial.texi  upgrading.texi
fftw3/genfft/: Makefile.am  Makefile.in  algsimp.ml  algsimp.mli  annotate.ml  annotate.mli  assoctable.ml  assoctable.mli  c.ml  c.mli  complex.ml  complex.mli  conv.ml  conv.mli  dag.ml  dag.mli  expr.ml  expr.mli  fft.ml  fft.mli  gen_hc2c.ml  gen_hc2cdft.ml  gen_hc2cdft_c.ml  gen_hc2hc.ml  gen_mdct.ml  gen_notw.ml  gen_notw_c.ml  gen_r2cb.ml  gen_r2cf.ml  gen_r2r.ml  gen_twiddle.ml  gen_twiddle_c.ml  gen_twidsq.ml  gen_twidsq_c.ml  genutil.ml  littlesimp.ml  littlesimp.mli  magic.ml  monads.ml  number.ml  (+20 more)
fftw3/kernel/: Makefile.am  Makefile.in  align.c  alloc.c  assert.c  awake.c  buffered.c  cpy1d.c  cpy2d-pair.c  cpy2d.c  ct.c  cycle.h  debug.c  extract-reim.c  hash.c  iabs.c  ifftw.h  kalloc.c  md5-1.c  md5.c  minmax.c  ops.c  pickdim.c  plan.c  planner.c  primes.c  print.c  problem.c  rader.c  scan.c  solver.c  solvtab.c  stride.c  tensor.c  tensor1.c  tensor2.c  tensor3.c  tensor4.c  tensor5.c  tensor7.c  (+7 more)
fftw3/libbench2/: Makefile.am  Makefile.in  after-ccopy-from.c  after-ccopy-to.c  after-hccopy-from.c  after-hccopy-to.c  after-rcopy-from.c  after-rcopy-to.c  allocate.c  aset.c  bench-cost-postprocess.c  bench-exit.c  bench-main.c  bench-user.h  bench.h  can-do.c  caset.c  dotens2.c  info.c  main.c  mflops.c  mp.c  my-getopt.c  my-getopt.h  ovtpvt.c  pow2.c  problem.c  report.c  speed.c  tensor.c  timer.c  useropt.c  util.c  verify-dft.c  verify-lib.c  verify-r2r.c  verify-rdft2.c  verify.c  verify.h  zero.c
fftw3/m4/: Makefile.am  Makefile.in  acx_mpi.m4  acx_pthread.m4  ax_cc_maxopt.m4  ax_check_compiler_flags.m4  ax_compiler_vendor.m4  ax_gcc_aligns_stack.m4  ax_gcc_version.m4  ax_openmp.m4
fftw3/mpi/: Makefile.am  Makefile.in  any-true.c  api.c  block.c  choose-radix.c  conf.c  dft-problem.c  dft-rank-geq2-transposed.c  dft-rank-geq2.c  dft-rank1-bigvec.c  dft-rank1.c  dft-serial.c  dft-solve.c  dtensor.c  f03-wrap.c  f03-wrap.sh  f03api.sh  fftw3-mpi.f03.in  fftw3-mpi.h  fftw3l-mpi.f03.in  genf03-wrap.pl  ifftw-mpi.h  mpi-bench.c  mpi-dft.h  mpi-rdft.h  mpi-rdft2.h  mpi-transpose.h  rdft-problem.c  rdft-rank-geq2-transposed.c  rdft-rank-geq2.c  rdft-rank1-bigvec.c  rdft-serial.c  rdft-solve.c  rdft2-problem.c  rdft2-rank-geq2-transposed.c  rdft2-rank-geq2.c  rdft2-serial.c  rdft2-solve.c  rearrange.c  (+7 more)
fftw3/rdft/: Makefile.am  Makefile.in  buffered.c  buffered2.c  codelet-rdft.h  conf.c  ct-hc2c-direct.c  ct-hc2c.c  ct-hc2c.h  (+37 more)
final_presentation/: CS_5500_Final_Project_Presentation.pptx
final_report/: Group_010_Final_Report.tex  MPI_Matrix_Profile.ipynb
midpoint_report/: .gitignore  Group_010_Midpoint_Report.tex
papers/: source.txt
proposal/: .gitignore  Group_010_Proposal.tex
src/: CMakeLists.txt  command_line_args.cxx  command_line_args.h  distance_profile.cxx  distance_profile.h  fourier_transform.cxx  fourier_transform.h  hostfile  log.cxx  log.h  matrix_profile.cxx  mean_and_standard_deviation.cxx  mean_and_standard_deviation.h  mpi_hello.cxx  read_time_series_csv.cxx  read_time_series_csv.h  sliding_dot_product.cxx  sliding_dot_product.h  stamp.cxx  stamp.h  test.py  timing.cxx  timing.h  types.h  write_matrix_profile_csv.cxx  write_matrix_profile_csv.h
test_data/: create_matrix_profile.py  requirements.txt
tests/: command_line_args_test.cxx  distance_profile_test.cxx  fftw_test.cxx  fourier_transform_test.cxx  hello_test.cxx  log_test.cxx  mean_and_standard_deviation_test.cxx  read_time_series_csv_test.cxx  sliding_dot_product_test.cxx  stamp_test.cxx  timing_test.cxx  write_matrix_profile_csv_test.cxx
(+3037 files in other folders)
